fixed default texture issue

--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@
       </div>      
 
       <div class="controls glass" id="texture-panel">
+        <p>Diffuse</p>
+        <select id="diffuse">
+          <option>None</option>
+          <option value="MTN-1.jpg">
+            MTN-1</option>
+          <option value="MTN-2.jpg">
+            MTN-2</option>
+          <option value="MTN-3.jpg">
+            MTN-3</option>
+          <option value="MTN-4.jpg">
+            MTN-4</option>
+          <option value="filthy-space-panels_albedo.png">
+            Filthy Space Panel</option>
+          <option value="alien-metal_albedo.png">
+            Alien Metal</option>
+          <option value="vertical-lined-metal_albedo.png">
+            Vertical Lined Metal</option>
+        </select>
         <p>Normals</p>
         <select id="normals2">
           <option>None</option>
@@ -29,10 +47,10 @@
           <option value="vertical-lined-metal_normal-ogl.png">
             Vertical Lined Metal</option>
         </select>
-        <p>Custom texture name</p>
+        <!--p>Custom texture name</p>
         <p id="texture-name">None</p>
         <p>Image name from file name</p>
-        <p id="image-name">None</p>
+        <p id="image-name">None</p-->
       </div>
 
       <button id="color-controls-button">
